# smithy

./: .gitignore  .reviewdog.yml  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  olio.go  package-lock.json  package.json  report (1).html  revive.toml  smithy-security-oss-components-0.56.2.tgz  smithy.db  test.json  tools.go
.github/: settings.yml
components/: Dockerfile  docker-compose.yaml
containers/: Dockerfile.buf  Dockerfile.smithyctl
docs/: CHANGELOG.md  custom-components.md  getting-started.md  migrations.md  running-on-github.md  setup-smithy-in-custom-k8s-engine.md  writing-pipelines.md
new-components/scanners/pip-audit/internal/transformer/testdata/: pyproject.toml  requirements.txt  result.json
sdk/python/: README.md  pyproject.toml
sdk/python/smithy/: __init__.py
sdk/python/smithy/components/: component.py  enricher.py  enricher_context.py  example_enricher.py  example_enricher_context.py  runner.py
sdk/python/smithy/dbmanagers/: __init__.py  db_context.py  db_manager.py  postgres_db_manager.py  remote_db_manager.py  resolver.py  sqlite_db_manager.py
sdk/python/smithy/enums/: db_type_enum.py
sdk/python/smithy/helpers/: logger.py
sdk/python/smithy/ocsf/ocsf_ext/finding_info/v1/: finding_info_pb2.py  finding_info_pb2_grpc.py
sdk/python/smithy/ocsf/ocsf_schema/v1/: ocsf_schema_pb2.py  ocsf_schema_pb2_grpc.py
sdk/python/smithy/remote_store/findings_service/v1/: findings_service_pb2.py  findings_service_pb2_grpc.py
sdk/python/smithy_python/components/: component.py  enricher.py  enricher_context.py  example_enricher.py  example_enricher_context.py
sdk/python/smithy_python/dbmanagers/: __init__.py  db_manager.py  postgres_db_manager.py  remote_db_manager.py  sqlite_db_manager.py
sdk/python/smithy_python/enums/: db_type_enum.py
sdk/python/smithy_python/helpers/: logger.py
sdk/python/smithy_python/ocsf/ocsf_ext/finding_info/v1/: finding_info_pb2.py  finding_info_pb2_grpc.py
sdk/python/smithy_python/ocsf/ocsf_schema/v1/: ocsf_schema_pb2.py  ocsf_schema_pb2_grpc.py
sdk/python/smithy_python/remote_store/findings_service/v1/: findings_service_pb2.py  findings_service_pb2_grpc.py
sdk/python/tests/: server.py  test_component.py  test_data.py  test_example_enricher.py  test_example_enricher_context.py  test_remote_db_manager.py  test_runner.py
sdk/smithy-gen/: README.md  pyproject.toml
sdk/smithy-gen/findings_service/v1/: findings_service_pb2.py  findings_service_pb2_grpc.py
sdk/smithy-gen/ocsf_ext/finding_info/v1/: finding_info_pb2.py
sdk/smithy-gen/ocsf_schema/v1/: ocsf_schema_pb2.py
(+1442 files in other folders)
