[tool.poetry]
name = "smithy-gen"              
version = "0.1.0"
description = "Generated protobuf & gRPC stubs"
authors = [
    "Smithy Security <info@smithy.security>",
]
readme = "README.md"
packages = [
    { include = "findings_service" },
    { include = "ocsf_schema" },
    { include = "ocsf_ext" },
]

[tool.poetry.dependencies]
python = ">=3.12"
grpcio = ">=1.73.1,<2.0.0"
protobuf = ">=6.31.1,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
