[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[project]
name = "my_project"
version = "0.1.0"
description = "A sample Poetry project"
dependencies = [ "requests>=2.31.0", "pyyaml==5.1.2",]
[[project.authors]]
name = "Your Name"
email = "you@example.com"

[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = [ "Your Name <you@example.com>",]
readme = "README.md"

[project.license]
text = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "5.1.2"
